--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
 		<module>jaws-spark-sql-rest</module>
 		<module>jaws-spark-sql-data</module>
 		<module>jaws-hive-sql-rest</module>
+		<module>hdfs-tachyon-file-browser</module>
 	</modules>
 </project>
